--- a/CSS/registration-style.css
+++ b/CSS/registration-style.css
@@ -13,7 +13,7 @@ body{
 /* a class to design the header of the form */
 .registrationFormHeader {
 	margin: auto;	
-	width:26%;
+	/*width:26%;*/
 	color: #FFFFFF;
 	background-color: #663366;
 	text-align:center;
@@ -23,7 +23,7 @@ body{
 /* a class to dsign for the rest of the form*/
 .registrationFormBody{
 	margin: auto;
-	width:26%;
+	/*width:26%;*/
 	padding:20px;
 	border-radius:0px 0px 10px 10px;
 	background-color:#FFFFFF;
